hermes/tests/fixtures/enums_pattern_matching/expected.stderr
  × Type mismatch
  │   Enum.A x
  │ has type
  │   Enum
  │ but is expected to have type
  │   Wrapper
    ╭─[[PROJECT_ROOT]/src/lib.rs:9:9]
  8 │ /// isValid self := match self with
  9 │ ///   | Enum.A x => x > 10
    ·         ────┬───
    ·             ╰── here
 10 │ ///   | Enum.B b => b
    ╰────

Error: Lean verification failed
